--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Refresh" content="0; url='https://linktr.ee/deltavolt'">
+    </head>
+</html>
